--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --extensions \".js,.ts\" --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "node dist/vitas.js",
-    "start-dev": "node vitas",
+    "start:dev": "npx tsx vitas.ts",
     "vitas": "npm run build && npm run start",
     "check-types": "tsc"
   },
@@ -25,7 +25,7 @@
     "@types/node": "^11.13.4",
     "axios": ">=0.18.1",
     "compromise": "^12.3.0",
-    "discord.js": "^11.4.2",
+    "discord.js": "^14.8.0",
     "markov-strings": "^2.1.0",
     "mongodb": "^3.2.3",
     "rimraf": "^2.6.3"
